# ConsensusCouncilLLM

./: ARCHITECTURE.md  COMPARATIVE_EVAL_NOTE.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  DEMO_PROOF.md  DEMO_RUNBOOK.md  EU_REGULATORY_IMPACT.md  GOVERNANCE.md  INSTALL.md  INTEGRATION_CONTRACTS_V1.md  POSITIONING_MATRIX_V1.md  QUICKSTART.md  README.md  RESEARCH.md  RESEARCH_FOUNDATIONS.md  REVIEWER_WALKTHROUGH.md  ROADMAP.md
demo/dependency_upgrade_run/: adjudication.json  evidence_graph.json  patch_attestation.json  replay_record.json
demo/sample_run/: adjudication.json  evidence_graph.json  review_summary.md
demo/security_regression_prevented_run/: adjudication.json  evidence_graph.json  patch_attestation.json  replay_record.json  review_summary.md
fixtures/auth_validation_fix/: checks.json  critiques.json  fixture_manifest.json  policy.json  proposals.json  task.json
fixtures/dependency_upgrade/: checks.json  critiques.json  fixture_manifest.json  policy.json  proposals.json  task.json
fixtures/dependency_upgrade/repo/: package-lock.json  package.json
fixtures/security_regression_prevented/: checks.json  critiques.json  fixture_manifest.json  policy.json  proposals.json  task.json
releases/v0.1-evidence-bundle/: README.md  TAMPER_PROOF.md  WHY_THIS_PREVENTED_A_BAD_MERGE.md
releases/v0.1-evidence-bundle/schemas/: adjudication_result.schema.json  (+2 more)
schemas/: fixture_manifest.schema.json  patch_attestation.schema.json  replay_record.schema.json
src/: cli.rs  lib.rs  main.rs  policy.rs  run.rs  schema.rs  verify.rs
tests/: council_cli.rs
(+28 files in other folders)
