[package]
name = "council"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Artifact-first governance CLI for AI-generated code changes"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.60", features = ["derive"] }
jsonschema = "0.45.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"

[dev-dependencies]
assert_cmd = "2.2.0"
tempfile = "3.26.0"
